--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 <div class="oval mr-4"><img class="align-self-start" src="images/quality-results.png" alt=""></div>
                 <div class="media-body">
                     <h5 class="mb-0">Banking Platforms</h5>
-                    Credit Unions, Banks, Treasuries,MSB’s & More
+                    Resource allocation for the companies specially focusing on Credit Unions, Banks, Treasuries,MSB’s.
                 </div>
             </div>
             <div class="media col-md-6 col-lg-4">
