--- a/index.html
+++ b/index.html
@@ -286,8 +286,7 @@
                 <div class="oval mr-4"><img class="align-self-start" src="images/analytics.png" alt=""></div>
                 <div class="media-body">
                     <h5 class="mb-0">Analytics</h5>
-                    Aliquam a nisl pulvinar, hendrerit arcu sed, dapibus velit. Duis ac quam id sapien vestibulum
-                    fermentum ac eu eros. Aliquam erat volutpat.
+                    Providing banking for the use of various tools and technologies to collect, process, and analyze raw data within the banking industry. Examples of banking analytics include customer segmentation, credit risk management, and fraud detection.
                 </div>
             </div>
             <div class="media col-md-6 col-lg-4">
