--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                         </ul>
                     </div> -->
                     <div class="col-12">
-                        <p>&copy; 2019. All Rights Reserved. Design by <a href="#" target="_blank">Codmentor PVT LTD</a>.</p>
+                        <p>&copy; 2019. All Rights Reserved. Design by <a href="#" target="_blank">ameztech</a>.</p>
                     </div>
                 </div>
             </div>
