--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-md-5">
                 <h2> Amazing journey begins here </h2>
-                <p> The concept note is a comprehensive plan for our future business relations for the Canada market and other part of the world accordingly every stakeholder can get ready with their plans. Amez Technologies is focused on the last mile financial delivery services, which will create good traction in the business segments and also focusing on community thriving solutions . With our innovations and IP (Intellectual Property) holding’s in various verticals, we wanted to create an eco system among the various verticals of customers for further growth. </p>
+                <p> Amez Technologies is focused on the last mile financial delivery services, which will create good traction in the business segments and also focusing on community thriving solutions . With our innovations and IP (Intellectual Property) holding’s in various verticals, we wanted to create an eco system among the various verticals of customers for further growth. Globally Fintech solutions gaining the momentum and Amez Tech enter each and every possible countries which helps us to establish innovat</p>
                 <p>
                     <small>Globally Fintech solutions gaining the momentum and Amez Tech would like to enter each and every possible countries which helps us to establish innovative fintech systems as well as vision of Amez Tech to become a global player with our own network.
                     </small>
@@ -417,12 +417,9 @@
                     <div class="col-6">
                         <h4>Company</h4>
                         <ul class="nav flex-column company-nav">
-                            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">News</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">FAQ's</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link">Amez Technologies Inc.</a></li>
+                            <li class="nav-item"><a class="nav-link">Address: 16, Windermere Crt, Brampton, Ontario,L6X </a></li>
+                            <li class="nav-item"><a class="nav-link">2L6, Canada</a></li>
                         </ul>
                         <h4 class="mt-5">Fllow Us</h4>
                         <ul class="nav follow-us-nav">
