--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     the best <span>solution</span> for
                     your business. </h1>
                 <p>  </p>
-                <a href="#">Contact Us <i class="fa fa-angle-right" aria-hidden="tue"></i></a></div>
+                <a href="#contact">Contact Us <i class="fa fa-angle-right" aria-hidden="tue"></i></a></div>
             <div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="images/banner-img.png" alt=""></div>
             </div>
@@ -91,12 +91,13 @@
             </div>
             <div class="col-md-5">
                 <h2> Amazing journey begins here </h2>
-                <p> Amez Technologies is focused on the last mile financial delivery services, which will create good traction in the business segments and also focusing on community thriving solutions . With our innovations and IP (Intellectual Property) holding’s in various verticals, we wanted to create an eco system among the various verticals of customers for further growth. Globally Fintech solutions gaining the momentum and Amez Tech enter each and every possible countries which helps us to establish innovat</p>
-                <p>
+                <p> Amez Technologies is focused on the last mile financial delivery services, which will create good traction in the business segments and also focusing on community thriving solutions . With our innovations and IP (Intellectual Property) holding’s in various verticals, we wanted to create an eco system among the various segments of customers for further growth. Globally Fintech solutions, gaining the momentum and Amez Tech would be become the forefront runner of that momentum.</p>
+                <!-- <p>
                     <small>Globally Fintech solutions gaining the momentum and Amez Tech would like to enter each and every possible countries which helps us to establish innovative fintech systems as well as vision of Amez Tech to become a global player with our own network.
                     </small>
-                </p>
-                <a href="#">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                </p> -->
+                <!-- <a href="#">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a> -->
+            </div>
         </div>
     </div>
 </div>
@@ -107,7 +108,8 @@
                 <h2> Explore The Services<br/>
                     We Offer For You </h2>
                 <p> </p>
-                <a href="#">All Services <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <!-- <a href="#">All Services <i class="fa fa-angle-right" aria-hidden="true"></i></a> -->
+            </div>
             <div class="col-lg-8">
                 <svg id="bg-services"
                      width="100%"
@@ -410,7 +412,7 @@
                 <input type="text" class="form-control" placeholder="Full Name">
                 <input type="email" class="form-control" placeholder="Email Address">
                 <textarea class="form-control" placeholder="Message"></textarea>
-                <a href="#" class="submit-button">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                <!-- <a href="#" class="submit-button">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a> -->
             </div>
             <div class="col-lg-6">
                 <div class="row">
@@ -423,13 +425,13 @@
                         </ul>
                         <h4 class="mt-5">Fllow Us</h4>
                         <ul class="nav follow-us-nav">
-                            <li class="nav-item"><a class="nav-link pl-0" href="#"><i class="fa fa-facebook"
+                            <li class="nav-item"><a class="nav-link pl-0" ><i class="fa fa-facebook"
                                                                                       aria-hidden="true"></i></a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-twitter"
+                            <li class="nav-item"><a class="nav-link" ><i class="fa fa-twitter"
                                                                                  aria-hidden="true"></i></a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-google"
+                            <li class="nav-item"><a class="nav-link" ><i class="fa fa-google"
                                                                                  aria-hidden="true"></i></a></li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-linkedin"
+                            <li class="nav-item"><a class="nav-link" ><i class="fa fa-linkedin"
                                                                                  aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
