--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#news">News</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="#news">News</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
             <!-- <form class="form-inline my-2 my-lg-0">
