--- a/index.html
+++ b/index.html
@@ -409,9 +409,9 @@
         <div class="row">
             <div class="col-lg-6" id="contact">
                 <h4> Contact Us </h4>
-                <input type="text" class="form-control" placeholder="Full Name">
-                <input type="email" class="form-control" placeholder="Email Address">
-                <textarea class="form-control" placeholder="Message"></textarea>
+                <input type="text" class="form-control" placeholder="Full Name" value="info@ameztech.ca" disabled>
+                <input type="email" class="form-control" placeholder="Email Address" disabled>
+                <textarea class="form-control" placeholder="Message" disabled></textarea>
                 <!-- <a href="#" class="submit-button">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a> -->
             </div>
             <div class="col-lg-6">
