--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@
             <div class="col-lg-6" id="contact">
                 <h4> Contact Us </h4>
                 <input type="text" class="form-control" placeholder="Full Name" value="info@ameztech.ca" disabled>
-                <input type="email" class="form-control" placeholder="Email Address" disabled>
-                <textarea class="form-control" placeholder="Message" disabled></textarea>
+                <input type="email" class="form-control" placeholder="" disabled>
+                <textarea class="form-control" placeholder="" disabled></textarea>
                 <!-- <a href="#" class="submit-button">READ MORE <i class="fa fa-angle-right" aria-hidden="true"></i></a> -->
             </div>
             <div class="col-lg-6">
