--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col-md-5">
                 <h2> Amazing journey begins here </h2>
-                <p> Amez Technologies is focused on the last mile financial delivery services, which will create good traction in the business segments and also focusing on community thriving solutions . With our innovations and IP (Intellectual Property) holding’s in various verticals, we wanted to create an eco system among the various segments of customers for further growth. Globally, Fintech solutions gaining the momentum and Amez Tech would like to become the forefront runner of that momentum.</p>
+                <p> Amez Technologies is focused on the last mile financial delivery services, which will create good traction in the business segments and also focusing on community thriving solutions . With our innovations and IP (Intellectual Property) holding’s in various verticals, we wanted to create an eco system among the various segments of customers for further growth. Globally, Fintech solutions are gaining the momentum and Amez Tech would like to become the forefront runner of that momentum.</p>
                 <!-- <p>
                     <small>Globally Fintech solutions gaining the momentum and Amez Tech would like to enter each and every possible countries which helps us to establish innovative fintech systems as well as vision of Amez Tech to become a global player with our own network.
                     </small>
